<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MTradeActivity!</string>
    <string name="app_name">MTrade v.2.26</string>
    <string name="RegisterStatus1">Регистрация прошла успешно!</string>
    <string name="RegisterStatus2">Не удалось зарегистрировать пользователя!</string>
    <string name="RegisterStatus3">Такой пользователь уже зарегистрирован!</string>
    <string name="TabCaption1">Инструменты</string>
    <string name="TabCaption2">Котировки</string>
    <string name="TabCaption3">Графики</string>
    <string name="TabCaption4">Портфель</string>
    <string name="TabCaption4_1">Архив</string>
    <string name="TabCaption5">История</string>
    <string name="TabCaption6">Сообщения</string>
    <string name="TabCaption7">Новости</string>
    <string name="SelectInstrs">Выбрать инструменты</string>
    <string name="PutOrder">Отправить</string>
    <string name="OrderDialogTitle">Заявка</string>
    <string name="MenuTitle">Меню</string>
    <string name="MenuItemPutOrder">Подать заявку</string>
    <string name="OrderDialogInstrument">Инструмент</string>
    <string name="BuyButton">Купить</string>
    <string name="SellButton">Продать</string>
    <string name="Price">Цена</string>
    <string name="Quantity">Количество</string>
    <string name="TitleInstr">Инстр</string>
    <string name="TitleChg">Средняя</string>
    <string name="TitleSell">Продажа</string>
    <string name="TitleBuy">Покупка</string>
    <string name="TitleStatus">Стат</string>
    <string name="MenuItemGoGlass">Открыть стакан</string>
    <string name="LoginName">Имя</string>
    <string name="Password">Пароль</string>
    <string name="Password1">Еще раз</string>
    <string name="Email">e-mail</string>
    <string name="GoLogin">Войти</string>
    <string name="GoRegister">Зарегистрироваться</string>
    <string name="GoRegister1">Отправить</string>
    <string name="LoginDialogTitle">Вход</string>
    <string name="LoginDialogTitle1">Регистрация</string>
    <string name="MenuItemRelogin">Подключиться с именем/паролем</string>
    <string name="TitleBuyQty">Объем покупки</string>
    <string name="TitleSellQty">Объем продажи</string>
    <string name="Clear">Очистить</string>
    <string name="Delete">Снять</string>
    <string name="MenuItemGoChart">График</string>
    <string name="CancelOrder">Отмена</string>
    <string name="CorrectPrice">Введите корректую цену</string>
    <string name="CorrectQty">Введите корректное количество</string>
    <string name="CorrectDate">Введите корректную дату</string>
    <string name="CorrectEmail">Введите e-mail</string>
    <string name="CorrectPassword">Введите пароль</string>
    <string name="CorrectPassword1">Пароли не совпадают</string>
    <string name="FilterHint">Поиск</string>
    <string name="Month3">3 мес</string>
    <string name="Month6">6 мес</string>
    <string name="Month12">12 мес</string>
    <string name="TitleCode">Счет</string>
    <string name="TitleCurr">Текущая</string>
    <string name="TitleIn">Входящая</string>
    <string name="TitleRest">Остаток</string>
    <string name="TitleRestCut">Ост</string>
    <string name="TitleType">Тип</string>
    <string name="TitleDir">Напр</string>
    <string name="TitleDate">Дата</string>
    <string name="TitleTime">Время</string>
    <string name="TitleFrom">От</string>
    <string name="TitleText">Текст</string>
    <string name="HistTransit">Приказы</string>
    <string name="HistDeal">Сделки</string>
    <string name="HistAll">Все</string>
    <string name="TitleQuantity">Кол-во</string>
    <string name="dsConfirmed">Done\nИсполнена</string>
    <string name="dsRejectedConf">Rejected by Investor\nОтклонена инвестором</string>
    <string name="dsRejectedPart">Rejected by Partner\nОтклонена контрагентом</string>
    <string name="dsRejectedSys">Rejected by CD\nОтклонена ЦД</string>
    <string name="dsWaitConf">Waits for Confirm\nОжидает подтверждения</string>
    <string name="dsWaitPart">Waits for Partner\nОжидает контрагента</string>
    <string name="dsWaitSys">Waits for CD\nОжидает ЦД</string>
    <string name="dsWaitsBuyer">Waits for Buyer\nОжидает покупателя</string>
    <string name="dsPaidBuyer">Paid by Buyer\nОплачена</string>
    <string name="dsUnpaid">Unpaid\nНе оплачена</string>
    <string name="dsNoteDelivered">Note Delivered\nДоставлено</string>
    <string name="dsUndelivered">Undelivered\nНе доставлено</string>
    <string name="dsWaitsChange">Waits for change note\nОжидает замены цб.</string>
    <string name="dsWaitsAgree">Waits for agreement\nОжидает согласия</string>
    <string name="dsRejectDepo">Reject Depo</string>
    <string name="dsRejectedSysNoMoney">Rejected by CD(cash problem)\nОтклонена ЦД (деньги отсутствуют)</string>
    <string name="dsRejectedSysNoSecur">Rejected by CD(sec.problem)\nОтклонена ЦД (бумаги отсутствуют)</string>
    <string name="dsWaitsAgreeDoubleNoMoney">Waits for double agreement(cash problem)\nОжидает повторного согласия (деньги отсутствуют)</string>
    <string name="dsWaitsAgreeDoubleNoSecur">Waits for double agreement(sec.problem)\nОжидает повторного согласия (бумаги отсутствуют)</string>
    <string name="dsNoAgreementNoMoney">No agreement(cash problem)\nОтказ повторных расчетов (деньги отсутствуют)</string>
    <string name="dsNoAgreementNoSecur">No agreement(sec.problem)\nОтказ повторных расчетов (бумаги отсутствуют)</string>
    <string name="dsRejectRepo">No agreement(chg repo)\nОтказ повторных расчетов (изменено РЕПО)</string>
    <string name="dsRejectedSysNotConf">Deal is rejected (not confirmed in time)\nСделка отклонена (не подтверждено в срок)</string>
    <string name="dsRejectBuyer">Rejected by Buyer\nОтклонена покупателем</string>
    <string name="dsRejectSeller">Rejected by Seller\nОтклонена продавцом</string>
    <string name="dsRejectSides">Rejected by sides\nОтклонено сторонами</string>
    <string name="dsWaitsSettlment">Waits for settlements\nОжидает расчета</string>
    <string name="trsWait">Waits for Broker\nОжидает брокера</string>
    <string name="trsActive">Active\nЗаявка подана</string>
    <string name="trsActBal">Active balance\nЧастично удовлетворена</string>
    <string name="trsDeal">Deal\nСделка заключена</string>
    <string name="trsDealChg">Deal(Chg)\nСделка изменена</string>
    <string name="trsReject">Rejected by System\nОтклонено системой</string>
    <string name="trsDelBrok">Deleted by Broker\nПриказ удален брокером</string>
    <string name="trsDelInv">Deleted by Investor\nПриказ удален инвестором</string>
    <string name="trsDelBalBrok">Deleted balance by Broker\nУдален остаток цб. брокером</string>
    <string name="trsDelBalInv">Deleted balance by Investor\nУдален остаток цб. инвестором</string>
    <string name="trsDelOper">Deleted by Operator\nУдалена оператором</string>
    <string name="trsDelBalOper">Deleted balance by Operator\nУдален остаток цб. оператором</string>
    <string name="trsActChg">Active(Chg)\nПоданная заявка изменена</string>
    <string name="trsActBalChg">Active balance(Chg)\nОстаток цб. поданной заявки изменен</string>
    <string name="TransitStatusOk">Операция прошла успешно</string>
    <string name="TransitStatusError">Операция не прошла. Ошибка:</string>
    <string name="err_NoPermissions">не хватает полномочий</string>
    <string name="err_NoRights">нет прав на подачу транзитных приказов по этому инструменту</string>
    <string name="err_OrderDisabled">запрещена подача заявок</string>
    <string name="err_OrderTypeDisabled">запрещена подача объектов указанного типа</string>
    <string name="err_OrderCheckLot">указано неверное количество</string>
    <string name="err_OrderCheckMax">превышены лимиты</string>
    <string name="err_OrderPriceStep">нарушен минимальный шаг изменения цены</string>
    <string name="err_InstrDispLastDealPrice">отклонение цены от последней сделки</string>
    <string name="err_InstrumentBlocked">инструмент блокирован</string>
    <string name="err_TrdAccLimit">превышены лимиты по торговому счету</string>
    <string name="err_TradeAccountBlocked">торговый счет заблокирован</string>
    <string name="err_CashAccLimit">превышены лимиты по денежному счету</string>
    <string name="err_CashAccOpenPosLimit">превышены лимиты по открытым позициям</string>
    <string name="err_OrderWrongTrdAccID">неправильный номер торгового счета</string>
    <string name="err_OrderAlienFirmCashAcc">указан номер денежного счета, который не принадлежит данному участнику торгов</string>
    <string name="err_OrderNoRightsOnTrdAcc">нет прав на торговый счет</string>
    <string name="err_OrderNoRightsOnCashAcc">нет прав на денежный счет</string>
    <string name="err_OrderWrongExpireDate">неправильная дата истечения</string>
    <string name="err_OrderWrongExpireTime">неправильное время истечения</string>
    <string name="err_CmdBadSatisfyOrderID">неправильный идентификатор заявки</string>
    <string name="err_OrderWrongDirection">неправильное направление</string>
    <string name="err_OrderWrongPrice">неправильная цена</string>
    <string name="err_OrderWrongQuantity">неправильное количество</string>
    <string name="err_OrderWrongKredId">неправильный идентификатор предмета репо</string>
    <string name="err_OrderWrongFirm">не найден код контрагента</string>
    <string name="err_OrderWrongPriceOrQuantity">неправильная цена или количество</string>
    <string name="err_OrderWrongRazdel">неправильный раздел счета ДЕПО</string>
    <string name="err_CmdBadInstrumentID">указан неправильный идентификатор ("Id") инструмента</string>
    <string name="TitleError">Ошибка</string>
    <string name="ConnectError">Не удалось подключиться.\nПроверьте Интернет-соединение.</string>
    <string name="ConnectError1">Пропало соединение.\nВойдите снова.</string>
    <string name="fire">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="SortInstr">Сортировать по инструменту</string>
    <string name="SortStatus">По статусу</string>
    <string name="SortPrice">По цене</string>
    <string name="SortDate">По дате</string>
    <string name="Refresh">Обновить</string>
    <string name="LoginFailed200202">Неверный логин/пароль. Повторите попытку</string>
    <string name="LoginFailed201">Данный пользователь уже работает в системе!</string>
    <string name="LoginFailed">Ошибка при входе в систему</string>
    <string name="Transit">Показать сделки</string>
    <string name="Account">Счет</string>
    <string name="ExpDate">Дата истечения</string>
    <string name="KeyDialogTitle">Активизация ключа</string>
    <string name="MenuItemPort">Загрузить архив</string>
    <string name="MenuItemArcDeal">Добавить сделку вручную</string>
    <string name="MenuItemGoArchive">Открыть архив</string>
    <string name="WarButton">Реальные торги</string>
    <string name="TestButton">Тестовые торги</string>
    <string name="ArcDealDialogTitle">Архивная сделка</string>
    <string name="BuyButton1">Покупка</string>
    <string name="SellButton1">Продажа</string>
    <string name="PutArcDeal">Добавить</string>
    <string name="DealDate">Дата сделки</string>
    <string name="TitleAVG">AVG</string>
    <string name="TitleIncome">Доход</string>
    <string name="TitleIncomeProc">Доход, %</string>
    <string name="ConnectError2">Неверный ключ или пароль</string>

</resources>