<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/SlateGray" >

    <LinearLayout
        android:id="@+id/LinLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinLayoutPos02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/DarkGray"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                style="@style/CodeFontP1"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:gravity="left"
                android:paddingLeft="3dp"
                android:text="@string/TitleInstr" />

            <TextView
                style="@style/CodeFontP1"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.18"
                android:gravity="center"
                android:text="@string/TitleCode" />

            <TextView
                style="@style/CodeFontP1"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.12"
                android:gravity="right"
                android:text="@string/TitleCurr" />

            <TextView
                style="@style/CodeFontP1"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.12"
                android:gravity="right"
                android:paddingRight="4dp"
                android:text="@string/TitleIn" />

            <TextView
                style="@style/CodeFontP1"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.12"
                android:gravity="right"
                android:paddingRight="4dp"
                android:text="@string/TitleRest" />

            <TextView
                style="@style/CodeFontP1"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.12"
                android:gravity="right"
                android:paddingRight="4dp"
                android:text="@string/TitleAVG" />
            
            <TextView
                style="@style/CodeFontP1"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.12"
                android:gravity="right"
                android:paddingRight="4dp"
                android:text="@string/TitleIncome" />
            
            <TextView
                style="@style/CodeFontP1"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.12"
                android:gravity="right"
                android:paddingRight="4dp"
                android:text="@string/TitleIncomeProc" />
            </LinearLayout>

        <ListView
            android:id="@+id/PosList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="@android:color/transparent"
            android:choiceMode="singleChoice"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true"
            android:paddingBottom="5dp"
            android:paddingTop="0dp" >
        </ListView>
    </LinearLayout>
    
    <ProgressBar
        android:id="@+id/ProgressBarArc01"
        style="@android:style/Widget.ProgressBar.Large.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" >
    </ProgressBar>
    
</RelativeLayout>