<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/grlayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:padding="3dp"
        android:weightSum="1" >

        <Button
            android:id="@+id/grbutton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Month3" />

        <Button
            android:id="@+id/grbutton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Month6" />

        <Button
            android:id="@+id/grbutton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Month12" />
    </LinearLayout>

</LinearLayout>