<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent"
	android:background="@color/SlateGray"
	>
	
	<LinearLayout android:orientation="vertical" android:id="@+id/LinLayout01"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		>
	
		<LinearLayout android:orientation="horizontal"
		     android:id="@+id/LinLayout02" android:layout_width="fill_parent" android:layout_height="30dip"
			>
		    		<TextView 
		android:layout_width="120dip" 
		android:layout_height="fill_parent" 
		android:textSize="16dp"
		android:textColor="@color/White"
		android:textStyle="bold"
		android:layout_gravity="center_vertical"
		android:text = "@string/TitleInstr">
		</TextView>
		
		<TextView 
		android:layout_width="60dip" 
		android:layout_height="fill_parent" 
		android:textSize="16dp"
		android:textColor="@color/White"
		android:textStyle="bold"
		android:layout_gravity="center_vertical"
		android:gravity="center_horizontal"
		android:text = "@string/TitleStatus">
		</TextView>
						
		<TextView 
		android:layout_width="120dip" 
		android:layout_height="fill_parent" 
		android:textSize="16dp"
		android:textColor="@color/White"
		android:textStyle="bold"
		android:layout_gravity="center_vertical"
		android:gravity="right"
		android:text = "@string/TitleChg">
		</TextView>
				
		<TextView 
		android:layout_width="120dip" 
		android:layout_height="fill_parent" 
		android:textSize="16dp"
		android:textColor="@color/White"
		android:textStyle="bold"
		android:layout_gravity="center_vertical"
		android:gravity="right"
		android:text = "@string/TitleBuy">
		</TextView>
				
		<TextView 
		android:layout_width="120dip" 
		android:layout_height="fill_parent" 
		android:textSize="16dp"
		android:textColor="@color/White"
		android:textStyle="bold"
		android:layout_gravity="center_vertical"
		android:gravity="right"
		android:text = "@string/TitleSell">
		</TextView>
		    				
				
		</LinearLayout>

	<ListView
	    android:id="@+id/InstrList"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:choiceMode="singleChoice"
	    android:paddingBottom="10dp"
	    android:paddingTop="10dp"
	    android:footerDividersEnabled="true"
	    android:headerDividersEnabled="true">
	</ListView>
	
			
	</LinearLayout>
	
	<ProgressBar android:id="@+id/ProgressBar01"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		style="@android:style/Widget.ProgressBar.Large.Inverse"
		android:layout_centerInParent="true" android:visibility="invisible"></ProgressBar>
	
</RelativeLayout>