<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customorderdialog"
    android:layout_width="200dip"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
    android:id="@+id/orderlayout2" android:orientation="horizontal"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:padding="7dp"
    >
    
        
    <TextView android:id="@+id/logintext"
              android:layout_height="fill_parent"
              android:textColor="#FFFFFF"
              android:layout_width="100dip" 
              android:text="@string/LoginName"
              />
    
    <EditText 	android:id="@+id/loginnameedit"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				/>
    
	</LinearLayout>
    
    <LinearLayout
    android:id="@+id/orderlayout3" android:orientation="horizontal"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:padding="7dp"
    android:background="@android:color/transparent">
    
        
    <TextView android:id="@+id/passtext"
              android:layout_height="fill_parent"
              android:textColor="#FFFFFF"
              android:layout_width="100dip" 
              android:text="@string/Password"
              />
    
    <EditText 	android:id="@+id/passwordedit"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:inputType ="textPassword"
				/>
    
	</LinearLayout>
        
<Button
android:id="@+id/gologin"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/GoLogin"
/>
    
</LinearLayout>