<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/SlateGray" >

    <LinearLayout
        android:id="@+id/LinLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinLayoutPos02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/DarkGray"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                style="@style/CodeFont1"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:gravity="left"
                android:paddingLeft="3dp"
                android:text="@string/TitleTime" />

            <TextView
                style="@style/CodeFont1"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.15"
                android:gravity="left"
                android:text="@string/TitleFrom" />

            <TextView
                style="@style/CodeFont1"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.65"
                android:gravity="left"
                android:paddingRight="4dp"
                android:text="@string/TitleText" />
        </LinearLayout>

        <ListView
            android:id="@+id/MesList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="@android:color/transparent"
            android:choiceMode="singleChoice"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true"
            android:paddingBottom="5dp"
            android:paddingTop="0dp" >
        </ListView>
    </LinearLayout>

</RelativeLayout>